container3 fix color contrast

--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ button{
 
 .container3 {
     padding: 25px;
-    color: #fff;
+    color: #525252;
     background-color: rgb(85, 218, 218);
     display: flex;
     flex-direction: column;
